# agentic-visual-grounding-rubric

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
agent-rules/: claude-code.md  copilot-instructions.md  cursor-rules.md  windsurf-rules.md
cgv/: __init__.py  manifest.py  media.py  routing.py  schemas.py
cgv/examples/: __init__.py  frame_audit.py
docs/: evaluation.md  human-agent-loop.md  vlm-configuration.md
skill/: system_prompt_template.txt  visual_grounding_rubric.md
tests/: test_manifest.py  test_media.py  test_routing.py
